// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expandableContent should return additional error 1`] = `
<ul>
  <li>
    These are additional errors
  </li>
</ul>
`;

exports[`expandableContent should return additional info 1`] = `
<ul>
  <li>
    This is additional info
  </li>
</ul>
`;

exports[`expandableContent should return attribute errors 1`] = `
<ul>
  <li>
    could not be processed
  </li>
  <li>
    name: can't be blank
  </li>
  <li>
    name: has invalid format
  </li>
</ul>
`;

exports[`expandableContent should return no errors 1`] = `
<span>
  There were no errors.
</span>
`;
